[LS-001-B] Merge test implementation back [BJ, PT]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
 
     // optional - Test helpers
     testImplementation "androidx.room:room-testing:$room_version"
+
+    androidTestImplementation 'androidx.test:rules:1.1.0'
 }
