--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         <activity android:name=".CreateStartUp"></activity>
         <activity android:name=".LoginActivity"></activity>
         <activity android:name=".AccountList"></activity>
+        <activity android:name=".CreateVaultEntry"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
