--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-intents:3.3.0"
     androidTestImplementation 'androidx.test:rules:1.3.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
 
     def room_version = "2.2.6"
